Containment & implement unsafe way of removing reflection filters